--- a/src/assets/portfoliostyle.css
+++ b/src/assets/portfoliostyle.css
@@ -42,47 +42,15 @@ Jacket Color2: 042659
   border: 2px solid #042659;
 }
 
-.projectCard {
-  width: 60rem;
-}
-
 .btn {
   background-color: transparent;
   border: solid 1px white;
   color: white;
 }
 
-#projectsBody {
-  align-content: center;
-}
-
-#projectsHeader {
-  text-align: center;
-  font-family: 'Monoton', cursive;
-}
-
 #passGenerator:hover h6 {
   color: white;
   font-weight: bolder;
-}
-
-@media (max-width: 425px) {
-  #projectsHeader {
-    font-size: 54px;
-    margin: 0% 0% 0% -100%;
-  }
-  .projectCard {
-    width: 26rem;
-    margin: -33% 0% 33% -93%;
-  }
-  #projectsButton {
-    padding: 0% 5% 0% 5%;
-    margin-top: 1%;
-    margin-bottom: 1%;
-  }
-  #projectsBody {
-    margin: 4% 0% 0% 0%;
-  }
 }
 
 @media (max-width: 768px) {
